# driftwatch

./: .gitignore  README.md  pyproject.toml
driftwatch/: config.py  config_template.toml  diff.py  introspect.py  orm_parser.py
tests/: test_config.py  test_diff.py  test_introspect.py  test_orm_parser.py
